# Sentinel

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  sentinel.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  copr.yml  release.yml
packaging/: sentinel.spec  sentinel.spec.in
sentinel/: logger.py  ssh_manager.py
sentinel/lifecycle/: configure.py  onboard.py  provision.py
